Fixing run time errors when screen width is too small

--- a/css/gameStyle.css
+++ b/css/gameStyle.css
@@ -22,7 +22,8 @@ nav {
     align-content: center;
 }
 .title{
-    font-size: 1.5em;
+    font-weight: bold;
+    font-size: large;
     vertical-align: middle;
     margin-bottom: 500em;
 
